commented out extra images. added comments to .hidden class in css file and section of js that seems to be causing display error.

--- a/recipe.html
+++ b/recipe.html
@@ -103,25 +103,25 @@
 						<img class="process-image" src="./images/raw_salmon.jpeg" alt="Salmon on foil" />
 						</li>
 						<li>Zest your <b>lime</b> and <b>orange</b> into a medium bowl.
-						<img class="process-image brighten" src="./images/just_zested.jpeg" alt="Citrus zest" />
-						</li>
+<!-- 						<img class="process-image brighten" src="./images/just_zested.jpeg" alt="Citrus zest" />
+ -->						</li>
 						<li>Using a mortar and pestle, grind your <b>rose petals</b> as fine as you can. I have a fairly small mortar, so I grind one half of the petals first, then the other, so I don't spill half of them on the counter. Add to the citrus zest.
-							<img class="process-image" src="./images/roses_whole_with_pestle.jpeg" alt="Rose petals in mortar" />
+<!-- 							<img class="process-image" src="./images/roses_whole_with_pestle.jpeg" alt="Rose petals in mortar" /> -->
 							<img class="process-image" src="./images/ground_roses_3.jpeg" alt="Ground rose petals" />
-							<img class="process-image" src="./images/roses_added_to_mix.jpeg" alt="Rose zest mix" />
+<!-- 							<img class="process-image" src="./images/roses_added_to_mix.jpeg" alt="Rose zest mix" /> -->
 						</li>
 						<li>If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're using lime leaves, grind them in the mortar or a spice grinder. Using a mortar can be a bit challenging, and I often find I need to use my fingers to help break down the leaves. As you grind them, you'll uncover the middle stem of the leaf. Remove these, as they're a little hard to chew! Add to your rose zest mix.
-						<img class="process-image" src="./images/zest_whole_lime_and_pestle.jpeg" alt="Citrus zest and lime leaves" />
+<!-- 						<img class="process-image" src="./images/zest_whole_lime_and_pestle.jpeg" alt="Citrus zest and lime leaves" /> -->
 						<img class="process-image" src="./images/partially_ground_lime.jpeg" alt="Partially ground lime leaves" />
-						<img class="process-image" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
-						</li>
+<!-- 						<img class="process-image" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
+						</li> -->
 						<li>Measure in the <b>cumin</b>, <b>cinnamon</b>, and <b>sumac</b>. Give it a good stir with your measuring spoon.
-							<img class="process-image" src="./images/final_spice_mix.jpeg" alt="Unblended spice mix" />
-							<img class="process-image" src="./images/final_spice_mix_blended.jpeg" alt="Blended spice mix" />
+<!-- 							<img class="process-image" src="./images/final_spice_mix.jpeg" alt="Unblended spice mix" />
+							<img class="process-image" src="./images/final_spice_mix_blended.jpeg" alt="Blended spice mix" /> -->
 						</li>
 						<li>Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon at a time until it seems right to you, but you shouldn't need more than 6 tablespoons. Rub the marinade into all sides of the <b>salmon fillet(s)</b> except the skin, using a brush or your hands. Season with <b>salt</b> and <b>pepper</b>.
-							<img class="process-image" src="./images/oil_blended.jpeg" alt="Marinade" />
-							<img class="process-image" src="./images/ready_for_oven.jpeg" alt="Salmon ready for oven" />
+<!-- 							<img class="process-image" src="./images/oil_blended.jpeg" alt="Marinade" />
+ -->							<img class="process-image" src="./images/ready_for_oven.jpeg" alt="Salmon ready for oven" />
 						</li>
 						<li>Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 minutes at 450F.) The fish should lightly flake when turned with a fork.
 							<p><em>I did mean to take a picture of the finished product, but I was so hungry I forgot and just dug in!</em></p>
