--- a/recipe.html
+++ b/recipe.html
@@ -23,7 +23,17 @@
 
         <div class="intro">
           <h2>Salmon So Good</h2>
-          <p>This is one of my favourite recipes from Sabrina Ghayour's excellent <cite>Persiana</cite>. The first time I saw this recipe I was so intrigued by the spicing - cinnamon and cumin with salmon? I had to try it immediately! It's so simple and delicious, I make it almost every week. We have a butcher nearby who sells the best salmon I've ever had, so that doesn't hurt either! I've tried it with both smaller fillets and one larger piece, and find I prefer the fish in one big piece - it requires less handling, and I like the presentation better. The larger piece requires a little longer cooking time, and if you're using a gas barbecue, <strong>keep a close eye on it! They cook <em> a lot</em> faster than a regular oven.</strong> I like to use less olive oil because I find salmon to be fairly fatty on its own, and the extra oil can end up pooling at the bottom of the pan. And, being me, I always throw in a little more cinnamon. I usually try to cook extra, as it's delicious cold the next day, but my family often eats it all anyway - it's just too good! Serve it with a light green salad and you're set.</p>
+          <p>This is one of my favourite recipes from Sabrina Ghayour's excellent <cite>Persiana</cite>. 
+          The first time I saw this recipe I was so intrigued by the spicing - cinnamon and cumin with salmon? 
+          I had to try it immediately! It's so simple and delicious, I make it almost every week. We have a butcher 
+          nearby who sells the best salmon I've ever had, so that doesn't hurt either! I've tried it with both 
+          smaller fillets and one larger piece, and find I prefer the fish in one big piece - it requires less 
+          handling, and I like the presentation better. The larger piece requires a little longer cooking time, 
+          and if you're using a gas barbecue, <strong>keep a close eye on it! They cook <em> a lot</em> faster 
+          than a regular oven.</strong> I like to use less olive oil because I find salmon to be fairly fatty on 
+          its own, and the extra oil can end up pooling at the bottom of the pan. And, being me, I always throw in 
+          a little more cinnamon. I usually try to cook extra, as it's delicious cold the next day, but my family 
+          often eats it all anyway - it's just too good! Serve it with a light green salad and you're set.</p>
         </div>
       </section>
       <section>
@@ -99,39 +109,61 @@
         <div class="process">
           <h3>Process</h3>
           <ol>
-            <li>Preheat your oven to 400F/200C or fire up your barbeque, trying to get it is as close to this temperature as you can (our barbeque never gets that low, I aim for 450F). Line a baking sheet with parchment paper or aluminum foil. If using a bbq, set out some foil on a pan; parchment won't survive a modern barbeque. The pan will be used to transport your salmon to and from the grill.
+            <li>Preheat your oven to 400F/200C or fire up your barbeque, trying to get it is as close to this 
+            temperature as you can (our barbeque never gets that low, I aim for 450F). Line a baking sheet with 
+            parchment paper or aluminum foil. If using a bbq, set out some foil on a pan; parchment won't survive 
+            a modern barbeque. The pan will be used to transport your salmon to and from the grill.
             <img class="process-image" src="./images/raw_salmon.jpeg" alt="Salmon on foil" />
             </li>
             <li>Zest your <b>lime</b> and <b>orange</b> into a medium bowl.
 <!--            <img class="process-image brighten" src="./images/just_zested.jpeg" alt="Citrus zest" />
  -->            </li>
-            <li>Using a mortar and pestle, grind your <b>rose petals</b> as fine as you can. I have a fairly small mortar, so I grind one half of the petals first, then the other, so I don't spill half of them on the counter. Add to the citrus zest.
-<!--              <img class="process-image" src="./images/roses_whole_with_pestle.jpeg" alt="Rose petals in mortar" /> -->
+            <li>Using a mortar and pestle, grind your <b>rose petals</b> as fine as you can. I have a fairly small 
+            mortar, so I grind one half of the petals first, then the other, so I don't spill half of them on the 
+            counter. Add to the citrus zest.
+<!--              <img class="process-image" src="./images/roses_whole_with_pestle.jpeg" alt="Rose petals in mortar" /> 
+-->
               <img class="process-image" src="./images/ground_roses_3.jpeg" alt="Ground rose petals" />
 <!--              <img class="process-image" src="./images/roses_added_to_mix.jpeg" alt="Rose zest mix" /> -->
             </li>
-            <li>If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're using lime leaves, grind them in the mortar or a spice grinder. Using a mortar can be a bit challenging, and I often find I need to use my fingers to help break down the leaves. As you grind them, you'll uncover the middle stem of the leaf. Remove these, as they're a little hard to chew! Add to your rose zest mix.
-<!--            <img class="process-image" src="./images/zest_whole_lime_and_pestle.jpeg" alt="Citrus zest and lime leaves" /> -->
+            <li>If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this 
+            in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're 
+            using lime leaves, grind them in the mortar or a spice grinder. Using a mortar can be a bit challenging, 
+            and I often find I need to use my fingers to help break down the leaves. As you grind them, you'll uncover 
+            the middle stem of the leaf. Remove these, as they're a little hard to chew! Add to your rose zest mix.
+<!--            <img class="process-image" src="./images/zest_whole_lime_and_pestle.jpeg" alt="Citrus zest and lime leaves" 
+/> -->
             <img class="process-image" src="./images/partially_ground_lime.jpeg" alt="Partially ground lime leaves" />
 <!--            <img class="process-image" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
             </li> -->
-            <li>Measure in the <b>cumin</b>, <b>cinnamon</b>, and <b>sumac</b>. Give it a good stir with your measuring spoon.
+            <li>Measure in the <b>cumin</b>, <b>cinnamon</b>, and <b>sumac</b>. Give it a good stir with your measuring 
+            spoon.
 <!--              <img class="process-image" src="./images/final_spice_mix.jpeg" alt="Unblended spice mix" />
               <img class="process-image" src="./images/final_spice_mix_blended.jpeg" alt="Blended spice mix" /> -->
             </li>
-            <li>Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon at a time until it seems right to you, but you shouldn't need more than 6 tablespoons. Rub the marinade into all sides of the <b>salmon fillet(s)</b> except the skin, using a brush or your hands. Season with <b>salt</b> and <b>pepper</b>.
+            <li>Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this 
+            amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon 
+            at a time until it seems right to you, but you shouldn't need more than 6 tablespoons. Rub the marinade into 
+            all sides of the <b>salmon fillet(s)</b> except the skin, using a brush or your hands. Season with <b>salt</b> 
+            and <b>pepper</b>.
 <!--              <img class="process-image" src="./images/oil_blended.jpeg" alt="Marinade" />
  -->              <img class="process-image" src="./images/ready_for_oven.jpeg" alt="Salmon ready for oven" />
             </li>
-            <li>Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 minutes at 450F.) The fish should lightly flake when turned with a fork.
-              <p><em>I did mean to take a picture of the finished product, but I was so hungry I forgot and just dug in!</em></p>
+            <li>Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. 
+            If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, 
+            checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 
+            minutes at 450F.) The fish should lightly flake when turned with a fork.
+              <p>
+                <em>I did mean to take a picture of the finished product, but I was so hungry I forgot and just dug in!</em>
+              </p>
             </li>
           </ol>
         </div>
       </section>
       <footer>
         <p>If you're interested in other recipes from <cite>Persiana</cite>, check it out on 
-        <span class="book-link"><a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana">Amazon</a>!</span>
+        <span class="book-link"><a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/
+        ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana">Amazon</a>!</span>
         </p>
       </footer>
     </div>
