--- a/recipe.html
+++ b/recipe.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="recipe.css" />
     <title>Citrus Spiced Salmon</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
+    <script src="./jquery-2.1.4.js"></script><!-- to run offline -->
     <script src="script.js"></script>
   </head>
 
@@ -16,7 +17,7 @@
 
       <section>
         <div class="right" id="intro-image">
-          <img src="./images/rose_petal_mortar_angle.jpg" alt="Rose petals in mortar" />
+          <img src="./images/rose_petal_mortar_angle_small.jpeg" alt="Rose petals in mortar" />
         </div>
 
         <div id="hide-images">Hide Images</div>
@@ -26,7 +27,7 @@
           <p>This is one of my favourite recipes from Sabrina Ghayour's excellent <cite>Persiana</cite>. 
           The first time I saw this recipe I was so intrigued by the spicing - cinnamon and cumin with salmon? 
           I had to try it immediately! It's so simple and delicious, I make it almost every week. We have a butcher 
-          nearby who sells the best salmon I've ever had, so that doesn't hurt either! I've tried it with both 
+          nearby who sells the best salmon I've ever had, so that doesn't hurt either. I've tried it with both 
           smaller fillets and one larger piece, and find I prefer the fish in one big piece - it requires less 
           handling, and I like the presentation better. The larger piece requires a little longer cooking time, 
           and if you're using a gas barbecue, <strong>keep a close eye on it! They cook <em> a lot</em> faster 
@@ -46,6 +47,56 @@
       <section>
         <h3>What You'll Need</h3>
 
+        <ul class="list ingredient-list">
+          <li class="ingredient-list-item">
+<!--           <div id="moz-round_image">
+ -->            <img class="ingredient-image" src="./images/dried_rose_petals_small.jpeg" alt="Whole dried rose petals"
+            title="Dried edible rose petals" />
+<!--           </div>
+ -->            <span class="ingredient-text"><strong>4 tbsp</strong> dried edible rose petals</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/sumac_3_small.jpeg" alt="Ground sumac" />
+            <span class="ingredient-text"><strong>2 tsp</strong> sumac</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/whole_lime_leaves_small.jpeg" alt="Whole lime leaves" />
+            <span class="ingredient-text"><strong>1 tsp</strong> dried lime powder or ground kaffir lime leaves</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/cumin_2_small.jpg" alt="Ground cumin" />
+            <span class="ingredient-text"><strong>1 tsp</strong> ground cumin</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/ground_cinnamon_2_small.jpeg" alt="Ground cinnamon" />
+            <span class="ingredient-text"><strong>1/2 tsp</strong> ground cinnamon</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/orange_close_small.jpeg" alt="Whole orange" />
+            <span class="ingredient-text"><strong>zest of 1</strong> orange; grapefruit works too</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/lime_small.jpeg" alt="Whole lime" />
+            <span class="ingredient-text"><strong>zest of 1</strong> lime</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image brighten" src="./images/olive_oil_small.jpeg" alt="Olive oil" />
+            <span class="ingredient-text"><strong>3-6 tbsp</strong> olive oil</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image brighten" src="./images/raw_salmon_small.jpeg" alt="Salmon ready for marinade" />
+            <span class="ingredient-text"><strong>1 1/2 - 2lbs</strong> salmon fillet</span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/salt_and_pepper_2_small.jpeg" alt="Salt and pepper" />
+            <span class="ingredient-text">sea salt and freshly ground black pepper, <strong>to taste</strong></span>
+          </li>
+          <li class="ingredient-list-item">
+            <img class="ingredient-image" src="./images/lemon_close_small.jpeg" alt="Mortar and pestle" />
+            <span class="ingredient-text">lemon <strong>wedges</strong>, to serve</span>
+          </li> 
+        </ul>
+
         <ul class="list equipment-list">
           <li class="equipment-list-item">aluminum foil or parchment paper</li>
           <li class="equipment-list-item">basting brush</li>
@@ -53,53 +104,6 @@
           <li class="equipment-list-item">grater or Microplane</li>
           <li class="equipment-list-item">measuring spoons</li>
           <li class="equipment-list-item">medium bowl</li>
-        </ul>
-
-        <ul class="list ingredient-list">
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/dried_rose_petals.jpeg" alt="Whole dried rose petals" />
-            <span class="ingredient-text"><strong>4 tbsp</strong> dried edible rose petals</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/sumac_3.jpg" alt="Ground sumac" />
-            <span class="ingredient-text"><strong>2 tsp</strong> sumac</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/whole_lime_leaves.jpeg" alt="Whole lime leaves" />
-            <span class="ingredient-text"><strong>1 tsp</strong> dried lime powder or ground kaffir lime leaves</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/cumin_2.jpg" alt="Ground cumin" />
-            <span class="ingredient-text"><strong>1 tsp</strong> ground cumin</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/ground_cinnamon_2.jpg" alt="Ground cinnamon" />
-            <span class="ingredient-text"><strong>1/2 tsp</strong> ground cinnamon</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/orange_close.jpeg" alt="Whole orange" />
-            <span class="ingredient-text"><strong>zest of 1</strong> orange; grapefruit works too</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/lime.jpg" alt="Whole lime" />
-            <span class="ingredient-text"><strong>zest of 1</strong> lime</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image brighten" src="./images/olive_oil.jpg" alt="Olive oil" />
-            <span class="ingredient-text"><strong>3-6 tbsp</strong> olive oil</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image brighten" src="./images/raw_salmon.jpeg" alt="Salmon ready for marinade" />
-            <span class="ingredient-text"><strong>1 1/2 - 2lbs</strong> salmon fillet</span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image brighten" src="./images/salt_and_pepper_2.jpg" alt="Salt and pepper" />
-            <span class="ingredient-text">sea salt and freshly ground black pepper, <strong>to taste</strong></span>
-          </li>
-          <li class="ingredient-list-item">
-            <img class="ingredient-image" src="./images/lemon_close.jpeg" alt="Mortar and pestle" />
-            <span class="ingredient-text">lemon <strong>wedges</strong>, to serve</span>
-          </li> 
         </ul>
 
       </section>
@@ -113,46 +117,46 @@
             temperature as you can (our barbeque never gets that low, I aim for 450F). Line a baking sheet with 
             parchment paper or aluminum foil. If using a bbq, set out some foil on a pan; parchment won't survive 
             a modern barbeque. The pan will be used to transport your salmon to and from the grill.
-            <img class="process-image" src="./images/raw_salmon.jpeg" alt="Salmon on foil" />
+            <img class="process-image" src="./images/raw_salmon_small.jpeg" alt="Salmon on foil" />
             </li>
             <li>Zest your <b>lime</b> and <b>orange</b> into a medium bowl.
-           <img class="process-image brighten" src="./images/just_zested.jpeg" alt="Citrus zest" />
+              <img class="process-image" class="dim" src="./images/zest_whole_lime_and_pestle_small.jpeg" alt="Citrus zest and lime 
+              leaves" />
             </li>
             <li>If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this 
             in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're 
             using lime leaves, grind them in the mortar or a spice grinder. Using a mortar can be a bit challenging, 
             and I often find I need to use my fingers to help break down the leaves. As you grind them, you'll uncover 
             the middle stem of the leaf. Remove these, as they're a little hard to chew! Add to the citrus zest.
-           <img class="process-image" src="./images/zest_whole_lime_and_pestle.jpeg" alt="Citrus zest and lime leaves" 
-/>
-            <img class="process-image" src="./images/partially_ground_lime.jpeg" alt="Partially ground lime leaves" />
-           <img class="process-image" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
+              <img class="process-image" src="./images/partially_ground_lime_small.jpeg" alt="Partially ground lime leaves" />
+              <img class="process-image" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
             </li>
             <li>Using a mortar and pestle or the spice grinder, grind your <b>rose petals</b> as fine as you can. I have a 
             fairly small mortar, so I grind one half of the petals first, then the other, so I don't spill half of them on the 
             counter. Add to your zest lime mix.
-              <img class="process-image" src="./images/roses_whole_with_pestle.jpeg" alt="Rose petals in mortar" /> 
+              <img class="process-image" src="./images/roses_whole_with_pestle_small.jpeg" alt="Rose petals in mortar" /> 
 
-              <img class="process-image" src="./images/ground_roses_3.jpeg" alt="Ground rose petals" />
-             <img class="process-image" src="./images/roses_added_to_mix.jpeg" alt="Rose zest mix" />
+              <img class="process-image" src="./images/ground_roses_3_small.jpeg" alt="Ground rose petals" />
+             <img class="process-image" src="./images/roses_added_to_mix_small.jpeg" alt="Rose zest mix" />
             </li>
             <li>Measure in the <b>cumin</b>, <b>cinnamon</b>, and <b>sumac</b>. Give it a good stir with your measuring 
             spoon.
-             <img class="process-image" src="./images/final_spice_mix.jpeg" alt="Unblended spice mix" />
-              <img class="process-image" src="./images/final_spice_mix_blended.jpeg" alt="Blended spice mix" />
+             <img class="process-image" src="./images/final_spice_mix_small.jpeg" alt="Unblended spice mix" />
+              <img class="process-image" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
             </li>
             <li>Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this 
             amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon 
             at a time until it seems right to you, but you shouldn't need more than 6 tablespoons. Rub the marinade into 
             all sides of the <b>salmon fillet(s)</b> except the skin, using a brush or your hands. Season with <b>salt</b> 
             and <b>pepper</b>.
-             <img class="process-image" src="./images/oil_blended.jpeg" alt="Marinade" />
-              <img class="process-image" src="./images/ready_for_oven.jpeg" alt="Salmon ready for oven" />
+             <img class="process-image" src="./images/oil_blended_small.jpeg" alt="Marinade" />
+              <img class="process-image" src="./images/ready_for_oven_small.jpeg" alt="Salmon ready for oven" />
             </li>
             <li>Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. 
             If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, 
             checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 
             minutes at 450F.) The fish should lightly flake when turned with a fork.
+              <img class="process-image" src="./images/cooked_5.jpg" alt="Cooked salmon" />
             </li>
           </ol>
         </div>
@@ -161,7 +165,6 @@
         <p>If you're interested in other recipes from <cite>Persiana</cite>, check it out on 
         <span class="book-link"><a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/
         ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana" target="_blank">Amazon</a>!</span>
-        </p>
       </footer>
     </div>
   </body>
