changed cooked jpeg to smaller file version.

--- a/recipe.html
+++ b/recipe.html
@@ -156,7 +156,7 @@
             If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, 
             checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 
             minutes at 450F.) The fish should lightly flake when turned with a fork.
-              <img class="process-image" src="./images/cooked_5.jpg" alt="Cooked salmon" />
+              <img class="process-image" src="./images/cooked_small.jpeg" alt="Cooked salmon" />
             </li>
           </ol>
         </div>
