toggle ingredient text on hover. changed speed on show/hide images. removed old toggle functions.

--- a/recipe.html
+++ b/recipe.html
@@ -49,11 +49,8 @@
 
         <ul class="list ingredient-list">
           <li class="ingredient-list-item">
-<!--           <div id="moz-round_image">
- -->            <img class="ingredient-image" src="./images/dried_rose_petals_small.jpeg" alt="Whole dried rose petals"
-            title="Dried edible rose petals" />
-<!--           </div>
- -->            <span class="ingredient-text"><strong>4 tbsp</strong> dried edible rose petals</span>
+            <img class="ingredient-image" src="./images/dried_rose_petals_small.jpeg" alt="Whole dried rose petals" />
+            <span class="ingredient-text"><strong>4 tbsp</strong> dried edible rose petals</span>
           </li>
           <li class="ingredient-list-item">
             <img class="ingredient-image" src="./images/sumac_3_small.jpeg" alt="Ground sumac" />
@@ -117,7 +114,7 @@
           <div class="process-step">
             <li>Preheat your oven to 400F/200C or fire up your barbeque, trying to get it is as close to this 
             temperature as you can (our barbeque never gets that low, I aim for 450F). Line a baking sheet with 
-            parchment paper or aluminum foil. If using a bbq, set out some foil on a pan; parchment won't survive 
+            parchment paper or aluminum foil. If using a barbeque, set out some foil on a pan; parchment won't survive 
             a modern barbeque. The pan will be used to transport your salmon to and from the grill.
             </li>
             <img class="process-image-large" src="./images/raw_salmon_small.jpeg" alt="Salmon on foil" />
@@ -143,14 +140,12 @@
             </li>
             <img class="process-image-large" src="./images/roses_whole_with_pestle_small.jpeg" alt="Rose petals in mortar" /> 
             <img class="process-image-large" src="./images/ground_roses_3_small.jpeg" alt="Ground rose petals" />
-<!--             <img class="process-image-large" src="./images/roses_added_to_mix_small.jpeg" alt="Rose zest mix" />
- -->            </div>
+            </div>
 
             <div class="process-step">
             <li>Zest your <b>lime</b> and <b>orange</b> into a medium bowl. Measure in the <b>cumin</b>, <b>cinnamon</b>, and <b>sumac</b>. Give it a good stir with your measuring spoon.
             </li>
-<!--             <img class="process-image-large" src="./images/final_spice_mix_small.jpeg" alt="Unblended spice mix" />
- -->            <img class="process-image-large" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
+            <img class="process-image-large" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
             </div>
 
             <div class="process-step">
