changed equipment list style to ingredient list style. Will make into one main list style.

--- a/recipe.html
+++ b/recipe.html
@@ -94,13 +94,13 @@
           </li> 
         </ul>
 
-        <ul class="list equipment-list">
-          <li class="equipment-list-item">aluminum foil or parchment paper</li>
-          <li class="equipment-list-item">basting brush</li>
-          <li class="equipment-list-item">mortar and pestle or spice grinder</li>
-          <li class="equipment-list-item">grater or Microplane</li>
-          <li class="equipment-list-item">measuring spoons</li>
-          <li class="equipment-list-item">medium bowl</li>
+        <ul class="list ingredient-list">
+          <li class="list-item">aluminum foil or parchment paper</li>
+          <li class="list-item">basting brush</li>
+          <li class="list-item">mortar and pestle or spice grinder</li>
+          <li class="list-item">grater or Microplane</li>
+          <li class="list-item">measuring spoons</li>
+          <li class="list-item">medium bowl</li>
         </ul>
 
       </section>
