--- a/recipe.html
+++ b/recipe.html
@@ -81,7 +81,8 @@
             <span class="ingredient-text"><strong>3-6 tbsp</strong> olive oil</span>
           </li>
           <li class="ingredient-list-item">
-            <img class="ingredient-image brighten" src="./images/raw_salmon_very_small.jpeg" alt="Salmon ready for marinade" />
+            <img class="ingredient-image brighten" src="./images/raw_salmon_very_small.jpeg" alt="Salmon ready for 
+            marinade" />
             <span class="ingredient-text"><strong>1 1/2 - 2lbs</strong> salmon fillet</span>
           </li>
           <li class="ingredient-list-item">
@@ -108,67 +109,72 @@
 
       <section>
         <div class="process">
-          <h3>Process <i class="bookmark-note"> - double-click to highlight your place in the instructions</i></h3>
+          <h3>Process <i class="bookmark-note"> - double-click a step to highlight your place in the instructions</i></h3>
           <ol>
 
-          <div class="process-step">
-            <li class="no-select">Preheat your oven to 400F/200C or fire up your barbeque, trying to get it is as close to this 
-            temperature as you can (our barbeque never gets that low, I aim for 450F). Line a baking sheet with 
-            parchment paper or aluminum foil. If using a barbeque, set out some foil on a pan; parchment won't survive 
-            a modern barbeque. The pan will be used to transport your salmon to and from the grill.
-            </li>
-            <img class="process-image-large" src="./images/raw_salmon_small.jpeg" alt="Salmon on foil" />
-
-            <div class="bookmark-hidden"></div>
-          </div>
-
-          <div class="process-step">
-            <li class="no-select">If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this 
-            in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're 
-            using lime leaves, grind them in the mortar or a spice grinder. Using a mortar can be a bit challenging, 
-            and I often find I need to use my fingers to help break down the leaves. As you grind them, you'll uncover 
-            the middle stem of the leaf. Remove these, as they're a little hard to chew!
-            </li>
-            <img class="process-image-large" src="./images/partially_ground_lime_small.jpeg" alt="Partially ground lime leaves" />
-            <img class="process-image-large" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
-          </div>
-
             <div class="process-step">
+              <div class="slide-button">Done this step</div>
+              <li>Preheat your oven to 400F/200C or fire up your barbeque, trying to get it is as close to this 
+              temperature as you can (our barbeque never gets that low, I aim for 450F). Line a baking sheet with 
+              parchment paper or aluminum foil. If using a barbeque, set out some foil on a pan; parchment won't survive 
+              a modern barbeque. The pan will be used to transport your salmon to and from the grill.
+              </li>
+              <img class="process-image-large" src="./images/raw_salmon_small.jpeg" alt="Salmon on foil" />
 
-            <li class="no-select">Using a mortar and pestle or the spice grinder, grind your <b>rose petals</b> as fine as you can. I have a 
-            fairly small mortar, so I grind one half of the petals first, then the other, so I don't spill half of them on the 
-            counter. Add to your lime powder.
-            </li>
-            <img class="process-image-large" src="./images/roses_whole_with_pestle_small.jpeg" alt="Rose petals in mortar" /> 
-            <img class="process-image-large" src="./images/ground_roses_3_small.jpeg" alt="Ground rose petals" />
+              <div class="bookmark-hidden"></div>
             </div>
 
             <div class="process-step">
-            <li class="no-select">Zest your <b>lime</b> and <b>orange</b> into a medium bowl. Measure in the <b>cumin</b>, <b>cinnamon</b>, and <b>sumac</b>. Give it a good stir with your measuring spoon.
-            </li>
-            <img class="process-image-large" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
+              <div class="slide-button">Done this step</div>
+              <li>If you have pre-ground <b>lime powder</b>, add that to the bowl. I haven't been able to find this 
+              in any of the nearby shops so I use dried <b>kaffir lime leaves</b> which I grind by hand. If you're 
+              using lime leaves, grind them in the mortar or a spice grinder. Using a mortar can be a bit challenging, 
+              and I often find I need to use my fingers to help break down the leaves. As you grind them, you'll uncover 
+              the middle stem of the leaf. Remove these, as they're a little hard to chew!
+              </li>
+              <img class="process-image-large" src="./images/partially_ground_lime_small.jpeg" alt="Partially ground 
+              lime leaves" />
+              <img class="process-image-large" src="./images/ground_lime.jpeg" alt="Ground lime leaves" />
             </div>
 
             <div class="process-step">
-
-            <li class="no-select">Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this 
-            amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon 
-            at a time until it seems right to you, but you shouldn't need more than 6 tablespoons. Rub the marinade into 
-            all sides of the <b>salmon fillet(s)</b> except the skin, using a brush or your hands. Season with <b>salt</b> 
-            and <b>pepper</b>.
-            </li>
-            <img class="process-image-large" src="./images/oil_blended_small.jpeg" alt="Marinade" />
-            <img class="process-image-large" src="./images/ready_for_oven_small.jpeg" alt="Salmon ready for oven" />
+              <div class="slide-button">Done this step</div>
+              <li>Using a mortar and pestle or the spice grinder, grind your <b>rose petals</b> as fine as you can. 
+              I have a fairly small mortar, so I grind one half of the petals first, then the other, so I don't spill half 
+              of them on the counter. Add to your lime powder.
+              </li>
+              <img class="process-image-large" src="./images/roses_whole_with_pestle_small.jpeg" alt="Rose petals in mortar" /> 
+              <img class="process-image-large" src="./images/ground_roses_3_small.jpeg" alt="Ground rose petals" />
             </div>
 
             <div class="process-step">
+              <div class="slide-button">Done this step</div>
+              <li>Zest your <b>lime</b> and <b>orange</b> into a medium bowl. Measure in the <b>cumin</b>, <b>cinnamon</b>, 
+              and <b>sumac</b>. Give it a good stir with your measuring spoon.
+              </li>
+              <img class="process-image-large" src="./images/final_spice_mix_blended_small.jpeg" alt="Blended spice mix" />
+            </div>
 
-            <li class="no-select">Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. 
-            If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, 
-            checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 
-            minutes at 450F.) The fish should lightly flake when turned with a fork.
-            </li>
-            <img class="process-image-large" src="./images/cooked_small.jpeg" alt="Cooked salmon" />
+            <div class="process-step">
+              <div class="slide-button">Done this step</div>
+              <li>Now add the <b>olive oil</b>. Start with 3 tablespoons, mix it in and check the consistency. With this 
+              amount of oil it should feel like a rub. If you like a more oily marinade, keep adding oil one tablespoon 
+              at a time until it seems right to you, but you shouldn't need more than 6 tablespoons. Rub the marinade into 
+              all sides of the <b>salmon fillet(s)</b> except the skin, using a brush or your hands. Season with <b>salt</b> 
+              and <b>pepper</b>.
+              </li>
+              <img class="process-image-large" src="./images/oil_blended_small.jpeg" alt="Marinade" />
+              <img class="process-image-large" src="./images/ready_for_oven_small.jpeg" alt="Salmon ready for oven" />
+            </div>
+
+            <div class="process-step">
+              <div class="slide-button">Done this step</div>
+              <li>Bake the salmon for 10-15 minutes if you have the smaller pieces, 30-35 minutes if cooking one big piece. 
+              If you're using a gas barbeque, put the foil directly on the grill and cook for a little over half that time, 
+              checking its progress periodically. (I had excellent results on the grill with a 2 1/2lb fillet for about 22 
+              minutes at 450F.) The fish should lightly flake when turned with a fork.
+              </li>
+              <img class="process-image-large" src="./images/cooked_small.jpeg" alt="Cooked salmon" />
             </div>
 
           </ol>
