removed bolding on ingredient text-only display. purchased ingredient text now displays with a checkmark.

--- a/recipe.html
+++ b/recipe.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="recipe.css" />
     <title>Citrus Spiced Salmon</title>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
-    <script src="./jquery-2.1.4.js"></script><!-- to run offline -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- to run offline -->
+    <!--<script src="./jquery-2.1.4.js"></script>-->
     <script src="script.js"></script>
   </head>
 
