removed equipment list for now.

--- a/recipe.html
+++ b/recipe.html
@@ -97,36 +97,7 @@
           </li> 
         </ul>
 
-<!--         <ul class="list equipment-list">
-
-          <li class="list-item">
-            <img class="ingredient-image" src="./unused_images/mortar_pestle_at_the_ready.jpeg" alt="Mortar and pestle" />
-            <span class="ingredient-text">aluminum foil or parchment paper</span>
-          </li>
-          <li class="list-item">
-            <img class="ingredient-image" src="./unused_images/mortar_pestle_at_the_ready.jpeg" alt="Mortar and pestle" />
-            <span class="ingredient-text">basting brush</span>
-          </li>
-          <li class="list-item">
-            <img class="ingredient-image" src="./unused_images/mortar_pestle_at_the_ready.jpeg" alt="Mortar and pestle" />
-            <span class="ingredient-text">mortar and pestle or spice grinder</span>
-          </li>
-          <li class="list-item">
-            <img class="ingredient-image" src="./unused_images/mortar_pestle_at_the_ready.jpeg" alt="Mortar and pestle" />
-            <span class="ingredient-text">grater or Microplane</span>
-          </li>
-          <li class="list-item">
-            <img class="ingredient-image" src="./unused_images/mortar_pestle_at_the_ready.jpeg" alt="Mortar and pestle" />
-            <span class="ingredient-text">measuring spoons</span>
-          </li>
-          <li class="list-item">
-            <img class="ingredient-image" src="./unused_images/mortar_pestle_at_the_ready.jpeg" alt="Mortar and pestle" />
-            <span class="ingredient-text">medium bowl</span>
-          </li>
-        </ul> -->
-
       </section>
-
 
       <section>
         <div class="process">
@@ -190,7 +161,9 @@
       </section>
       <footer>
         <p>If you're interested in other recipes from <cite>Persiana</cite>, check it out on 
-        <span class="book-link"><a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana" target="_blank">Amazon</a>!</span>
+        <span class="book-link">
+          <a href="http://www.amazon.ca/Persiana-Recipes-Middle-East-Beyond/dp/1566569958/ref=sr_1_1?ie=UTF8&amp;qid=1439056418&amp;sr=8-1&amp;keywords=persiana" target="_blank">Amazon</a>!
+        </span>
       </footer>
     </div>
   </body>
